--- a/package.json
+++ b/package.json
@@ -16,23 +16,44 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/firestore": "^20.4.0",
+    "@react-native-firebase/storage": "^20.4.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.13.0",
+    "modal": "^1.2.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "random": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
