--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/firestore": "^20.4.0",
     "@react-native-firebase/storage": "^20.4.0",
     "@react-native-picker/picker": "^2.7.7",
@@ -34,6 +35,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.13.0",
+    "javascript-time-ago": "^2.5.11",
     "modal": "^1.2.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -49,12 +51,15 @@
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-view-shot": "^3.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-time-ago": "^7.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
